[package]
name = "webhook-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = "1.4.1"
chrono = "0.4.31"
